Fri Aug 10 15:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted this change, could lead to problems

        * bin/MakeProjectCreator/config/gnuace.features:
          Enabled qos, the GNU makefiles will block the building of QoS

Fri Aug 10 11:59:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/gnuace.features:
          Enabled qos, the GNU makefiles will block the building of QoS

        * include/makeinclude/platform_mingw32.GNU:
          With MinGW we can build QoS support

        * ace/QoS/qos.mpc:
          Added ACE_HAS_QOS to the macros, this is already done for projects
          that use qos but not for the qos library itself

        * ace/config-win32-mingw.h:
          Added ACE_HAS_WINSOCK2_GQOS

Fri Aug 10 11:39:48 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ACE.mwc:

          Associate more directories and use the new '--' key.

        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:

          Fixed issues with generated Kokyu projects.

Fri Aug 10 09:33:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_gnuwin32_common.GNU:
          When building shared libraries default inline to 0

Fri Aug 10 08:57:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_main.h:
          Made the destructor of ACE_Main_Base virtual to resolve MinGW
          warnings

        * include/makeinclude/platform_linux_icc.GNU:
          Updated this file with changes that have been done in the gcc
          file the last years

Fri Aug 10 07:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Test operator=

Fri Aug 10 07:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Test the Atomic_Op also in single threaded builds and extended
          the test with unsigned long and unsigned int tests
