@@ -1,3 +1,10 @@
+Mon Aug 12 04:40:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-linux-common.h:
+          Always include config-posix.h, not only when ACE_HAS_LINUX_NPTL is
+          defined. Thanks to Thomas Girard <thomas dot g dot girard at free dot fr>
+          for noticing this
+
 Fri Aug 10 15:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         Reverted this change, could lead to problems
